# execompress

./: Cargo.toml  README.md
src/: main.rs  stub.rs  version_extractor.rs
src/test/: icoextractor.rs
stub_loader/: Cargo.toml  build.rs
stub_loader/src/: main.rs
