[package]
name = "stub_loader"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
xz2 = "0.1"
zstd = "0.13"
brotli = "7.0"
base64 = "0.22"
close-file = "0.1.0"
rand = "0.8"
fs-more = "0.8"
rayon = "1.10"

[build-dependencies]
winres = "0.1"

[features]
default = []
gui = []